concord_examples/tests/ui/rate_limit_precision_too_small.rs
use concord_macros::api;

api! {
    client UiRateLimitPrecisionTooSmall {
        base https "example.com"
    }

    GET Ping
        rate_limit {
            bucket method by [host] {
                2000000001 / 1s // ERROR: sub-nanosecond cell period
            }
        }
    -> Json<()>
}

fn main() {}
